force-app/main/default/objects/DRL_ExceptionLog__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <label>Class Name</label>
    <type>TextArea</type>
</CustomField>