force-app/main/default/objects/DRL_ExceptionLog__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <label>Method Name</label>
    <type>TextArea</type>
</CustomField>